-removed defaultValue for ReferenceAttribute -for update use current in memory data and not reload from database to avoid migration problems